--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,8 +3,20 @@ plugins {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.14'
+    implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
+    implementation 'org.springframework.retry:spring-retry'
+    implementation 'net.sf.dozer:dozer:5.5.1'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
+    implementation 'org.springframework:spring-tx'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
 
 springBoot {
     mainClass = 'com.reliaquest.api.ApiApplication'
