--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,7 +5,6 @@ server.port = 8111
 management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/manage
 management.endpoints.enabled-by-default=true
-management.security.enabled=false
 management.endpoint.shutdown.enabled=true
 management.endpoint.health.show-details = always
 management.endpoints.web.path-mapping.health=status
@@ -22,3 +21,19 @@ app.connection-manager.max-per-route=100
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# Retry Configuration
+resilience4j.retry.instances.mockServiceApiRetry.maxAttempts=3
+resilience4j.retry.instances.mockServiceApiRetry.waitDuration=3000
+resilience4j.retry.instances.mockServiceApiRetry.enableExponentialBackoff=true
+resilience4j.retry.instances.mockServiceApiRetry.exponentialBackoffMultiplier=2.0
+resilience4j.retry.instances.mockServiceApiRetry.retryExceptions=org.springframework.web.client.HttpClientErrorException.TooManyRequests
+
+# Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.mockServiceApiCircuitBreaker.recordExceptions=org.springframework.web.client.HttpClientErrorException.TooManyRequests
