--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name = employee-api
-server.port = 8111
+server.port=${SERVER_PORT:8111}
 
 ##Actuator endpoints
 management.endpoints.web.exposure.include=*
@@ -10,8 +10,7 @@ management.endpoint.health.show-details = always
 management.endpoints.web.path-mapping.health=status
 management.server.port=9090
 
-app.mock-employee-service.url=http://localhost:8112
-app.mock-employee-service.retry-attempts=3
+app.mock-employee-service.url=${MOCKSERVER_URL:http://localhost:8112}
 
 ##RestClient config
 app.connection-manager.max-routes=100
